# haskell-tdd-kata

./: ChangeLog.md  LICENSE  README.md  haskell-tdd-kata.cabal  stack.yaml
BowlingGameKata/BowlingGameDay01/: BowlingGameDay01.cabal
BowlingGameKata/BowlingGameDay01/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay02/: BowlingGameDay02.cabal
BowlingGameKata/BowlingGameDay02/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay02/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay03/: BowlingGameDay03.cabal
BowlingGameKata/BowlingGameDay03/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay03/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay04/: BowlingGameDay04.cabal
BowlingGameKata/BowlingGameDay04/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay04/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay05/: BowlingGameDay05.cabal
BowlingGameKata/BowlingGameDay05/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay05/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay06/: BowlingGameDay06.cabal
BowlingGameKata/BowlingGameDay06/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay06/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay07/: BowlingGameDay07.cabal
BowlingGameKata/BowlingGameDay07/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay07/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay08/: BowlingGameDay08.cabal
BowlingGameKata/BowlingGameDay08/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay08/test/BowlingGame/: KataSpec.hs
BowlingGameKata/BowlingGameDay09/: BowlingGameDay09.cabal
BowlingGameKata/BowlingGameDay09/src/BowlingGame/: Kata.hs
BowlingGameKata/BowlingGameDay1/: BowlingGameDay1.cabal
BowlingGameKata/BowlingGameDay10/: BowlingGameDay10.cabal
BowlingGameKata/BowlingGameDay11/: BowlingGameDay11.cabal
BowlingGameKata/BowlingGameDay12/: BowlingGameDay12.cabal
BowlingGameKata/BowlingGameDay13/: BowlingGameDay13.cabal
BowlingGameKata/BowlingGameDay14/: BowlingGameDay14.cabal
BowlingGameKata/BowlingGameDay14/src/BowlingGame/: Kata.hs
old-katas/src/BowlingKata/: Day2.hs  Day4.hs  Day6.hs  Day8.hs
old-katas/src/CalculatorKata/: Day2.hs  Day3.hs  Day9.hs
old-katas/src/FizzBuzzKata/: Day6.hs  Day8.hs  Day9.hs
old-katas/src/FruitShopKata/: Day1.hs  Day3.hs  Day5.hs
old-katas/src/LeapYearKata/: Day2.hs  Day3.hs  Day5.hs  Day6.hs  Day7.hs
old-katas/src/RomanNumbersKata/: Day1.hs  Day10.hs  Day4.hs  Day5.hs  Day7.hs
old-katas/src/ScrabbleScoreKata/: Day3.hs
old-katas/src/StringCompressorKata/: Day2.hs
old-katas/src/SubListKata/: Day4.hs
old-katas/src/TriangleKata/: Day1.hs  Day10.hs  Day4.hs  Day6.hs  Day9.hs
old-katas/src/UnclosedBracketsKata/: Day1.hs  Day4.hs  Day5.hs
old-katas/test/BowlingKata/: Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
old-katas/test/CalculatorKata/: Day10Spec.hs  Day1Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs
old-katas/test/FizzBuzzKata/: Day4Spec.hs  Day5Spec.hs  Day8Spec.hs  Day9Spec.hs
old-katas/test/FruitShopKata/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day6Spec.hs  Day7Spec.hs  Day9Spec.hs
old-katas/test/LeapYearKata/: Day10Spec.hs  Day1Spec.hs  Day4Spec.hs  Day5Spec.hs
old-katas/test/RomanNumbersKata/: Day8Spec.hs
old-katas/test/ScrabbleScoreKata/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day4Spec.hs  Day5Spec.hs  Day8Spec.hs  Day9Spec.hs
old-katas/test/StringCompressorKata/: Day1Spec.hs  Day2Spec.hs  Day4Spec.hs  Day8Spec.hs  Day9Spec.hs
old-katas/test/SubListKata/: Day1Spec.hs  Day5Spec.hs
old-katas/test/TriangleKata/: Day5Spec.hs  Day7Spec.hs
old-katas/test/UnclosedBracketsKata/: Day1Spec.hs  Day2Spec.hs  Day5Spec.hs
src/: Assert.hs  Main.hs
src/BowlingKata/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/CalculatorKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/FizzBuzzKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/FruitShopKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/LeapYearKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/RomanNumbersKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/ScrabbleScoreKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/StringCompressor/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
src/StringCompressorKata/: Day1.hs  Day10.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/SubListKata/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
src/TriangleKata/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/UnclosedBracketsKata/: Day2.hs  Day3.hs  Day6.hs
test/BowlingKata/: Day10Spec.hs  Day11Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs
test/CalculatorKata/: Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day9Spec.hs
test/FizzBuzzKata/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day6Spec.hs  Day7Spec.hs
test/FruitShopKata/: Day5Spec.hs  Day8Spec.hs
test/LeapYearKata/: Day2Spec.hs  Day3Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
test/RomanNumbersKata/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day9Spec.hs
test/ScrabbleScoreKata/: Day3Spec.hs  Day6Spec.hs  Day7Spec.hs
test/StringCompressorKata/: Day10Spec.hs  Day3Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs
test/SubListKata/: Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day6Spec.hs  Day7Spec.hs
test/TriangleKata/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day6Spec.hs  Day8Spec.hs  Day9Spec.hs
test/UnclosedBracketsKata/: Day3Spec.hs  Day4Spec.hs  Day6Spec.hs
(+10 files in other folders)
