name:               haskell-tdd-kata
version:            1.0
Build-Type:         Simple
cabal-version:      >= 1.8

library
  hs-source-dirs:   src
  exposed-modules:  BowlingKata.Day1, BowlingKata.Day2, BowlingKata.Day3, BowlingKata.Day4, BowlingKata.Day5
                    , BowlingKata.Day6, BowlingKata.Day7, BowlingKata.Day8, BowlingKata.Day9, BowlingKata.Day10
                    , BowlingKata.Day11, CalculatorKata.Day1, CalculatorKata.Day2, CalculatorKata.Day3
                    , CalculatorKata.Day4, CalculatorKata.Day5, CalculatorKata.Day6, CalculatorKata.Day7
                    , CalculatorKata.Day8, CalculatorKata.Day9, CalculatorKata.Day10, FizzBuzzKata.Day1
                    , FizzBuzzKata.Day2, FizzBuzzKata.Day3, FizzBuzzKata.Day4, FizzBuzzKata.Day5, FizzBuzzKata.Day6
                    , FizzBuzzKata.Day7, FizzBuzzKata.Day8, FizzBuzzKata.Day9, FizzBuzzKata.Day10, FruitShopKata.Day1
                    , FruitShopKata.Day2, FruitShopKata.Day3, FruitShopKata.Day4, FruitShopKata.Day5, FruitShopKata.Day6
                    , FruitShopKata.Day7, FruitShopKata.Day8, FruitShopKata.Day9, FruitShopKata.Day10, LeapYearKata.Day1
                    , LeapYearKata.Day2, LeapYearKata.Day3, LeapYearKata.Day4, LeapYearKata.Day5, LeapYearKata.Day6
                    , LeapYearKata.Day7, LeapYearKata.Day8, LeapYearKata.Day9, LeapYearKata.Day10, RomanNumbersKata.Day1
                    , RomanNumbersKata.Day2, RomanNumbersKata.Day3, RomanNumbersKata.Day4, RomanNumbersKata.Day5
                    , RomanNumbersKata.Day6, RomanNumbersKata.Day7, RomanNumbersKata.Day8, RomanNumbersKata.Day9
                    , RomanNumbersKata.Day10, ScrabbleScoreKata.Day1, ScrabbleScoreKata.Day2, ScrabbleScoreKata.Day3
                    , ScrabbleScoreKata.Day4, ScrabbleScoreKata.Day5, ScrabbleScoreKata.Day6, ScrabbleScoreKata.Day7
                    , ScrabbleScoreKata.Day8, ScrabbleScoreKata.Day9, ScrabbleScoreKata.Day10, SubListKata.Day1
                    , SubListKata.Day2, SubListKata.Day3, SubListKata.Day4, SubListKata.Day5, SubListKata.Day6
                    , SubListKata.Day7, TriangleKata.Day1, TriangleKata.Day2, TriangleKata.Day3, TriangleKata.Day4
                    , TriangleKata.Day5, TriangleKata.Day6, TriangleKata.Day7, TriangleKata.Day8, TriangleKata.Day9
                    , TriangleKata.Day10, StringCompressorKata.Day1, StringCompressorKata.Day2, StringCompressorKata.Day3
                    , StringCompressorKata.Day4, StringCompressorKata.Day5, StringCompressorKata.Day6
                    , StringCompressorKata.Day7, StringCompressorKata.Day8, StringCompressorKata.Day9
                    , StringCompressorKata.Day10, UnclosedBracketsKata.Day1
  build-depends:    base,
                    HUnit,
                    hspec

test-suite spec
  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is: Spec.hs

  build-depends:    base,
                    hspec,
                    haskell-tdd-kata
