name:               BowlingGameDay14
version:            1.0
Build-Type:         Simple
cabal-version:      >= 1.8

library
  hs-source-dirs:   src
  exposed-modules:  BowlingGame.Kata
  build-depends:    base,
                    HUnit,
                    hspec

test-suite spec
  type: exitcode-stdio-1.0

  hs-source-dirs: test
  other-modules:  BowlingGame.KataSpec

  main-is: Spec.hs

  build-depends:    base,
                    hspec,
                    BowlingGameDay14
